--- a/styling/styles.css
+++ b/styling/styles.css
@@ -40,35 +40,6 @@ h2 p {
   font-size: 20px;
 }
 
-.about-section {
-  padding: 160px 20px;
-  margin: 0 70px;
-}
-
-.about-section-content {
-  margin: 30px;
-}
-
-.about-section h1 {
-  font-size: 64px;
-  line-height: 80px;
-  font-weight: bold;
-  font-family: var(--heading-font);
-}
-
-.about-section h2 {
-  font-size: 18px;
-  font-family: var(--paragraph-font);
-  font-weight: bold;
-}
-
-.about-section p {
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
-  font-family: var(--paragraph-font);
-}
-
 .btn-branding {
   font-family: var(--paragraph-font);
   background: var(--primary-color);
@@ -110,6 +81,42 @@ h2 p {
   font-weight: 700;
   font-size: 64px;
   line-height: 85px;
+}
+
+.content {
+  margin: 30px;
+}
+
+.content-container {
+  padding: 160px 20px !important;
+  margin: 0 70px;
+}
+
+.content-container h1 {
+  font-size: 64px;
+  line-height: 80px;
+  font-weight: bold;
+  font-family: var(--heading-font);
+}
+
+.content-container h2 {
+  font-size: 18px;
+  font-family: var(--paragraph-font);
+  font-weight: bold;
+}
+
+.content-container h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  font-family: var(--paragraph-font);
+  font-weight: bold;
+}
+
+.content-container p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  font-family: var(--paragraph-font);
 }
 
 .hero {
@@ -166,7 +173,7 @@ h2 p {
     text-align: center;
   }
 
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
     margin: 0 auto;
@@ -186,11 +193,11 @@ h2 p {
     font-size: 18px !important;
   }
 
-  .about-section h1 {
+  .content-container h1 {
     font-size: 50px !important;
   }
 
-  .about-section h2 {
+  .content-container h2 {
     font-size: 20px !important;
   }
 }
