--- a/styling/styles.css
+++ b/styling/styles.css
@@ -22,6 +22,40 @@ h2 p {
   opacity: 0.7;
 }
 
+nav {
+  padding: 20px 0;
+}
+
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover {
+  color: var(--primary-color);
+}
+
+nav .active a {
+  color: var(--primary-color);
+}
+
+nav img {
+  height: 40px;
+}
+
+nav li {
+  display: inline;
+  margin-left: 15px;
+  line-height: 42px;
+}
+
+nav ul {
+  margin: 0;
+  font-family: var(--paragraph-font);
+  font-weight: 500;
+}
+
 .about-projects-btn {
   padding: 15px 30px;
   font-family: var(--paragraph-font);
