--- a/styling/styles.css
+++ b/styling/styles.css
@@ -6,10 +6,57 @@
   --paragraph-font: "Poppins", sans-serif;
 }
 
+footer {
+  margin: 60px 0;
+}
+
+footer .contact-box {
+  background: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+  line-height: 30px;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  font-weight: 500;
+}
+
+footer .email-link:hover {
+  color: var(--primary-color);
+}
+
+footer .social-links a {
+  color: var(--primary-color);
+  background: var(--secondary-color);
+  font-size: 18px;
+  margin: 0 20px;
+  padding: 10px 14px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: var(--secondary-color);
+  background: var(--primary-color);
+}
+
 h2 {
   font-size: 64px;
   font-weight: 700;
   font-family: var(--heading-font);
+}
+
+h4 {
+  font-size: 26px;
+  font-family: var(--heading-font);
+  font-weight: bold;
 }
 
 h2 p {
